--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
   <title>Mock Google</title>
 </head>
 <body>
-  <div>
+  <div class="container">
     <div class="search">
       <img class="logo_img" src="https://www.google.mv/images/srpr/logo11w.png">
-    <!-- <div> -->
-      <form action="#" name="search_box">
+<!--       <form action="#" name="search_box">
         <input type="text" name="search"> <br>
         <input type="submit" name="search" value="Search">
         <input type="button" name="lucky" value=" I'm Feeling Lucky">
-      </form>
+      </form> -->
     </div>
   </div>
 </body>
