--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
 </head>
 <body>
   <div class="container">
-    <div class="search">
-      <img class="logo_img" src="https://www.google.mv/images/srpr/logo11w.png">
-<!--       <form action="#" name="search_box">
-        <input type="text" name="search"> <br>
-        <input type="submit" name="search" value="Search">
-        <input type="button" name="lucky" value=" I'm Feeling Lucky">
-      </form> -->
+    <div class="logo">
+
     </div>
+    <form action="#">
+      <div class="search_box">
+        <input type="text" name="search_box">
+      </div>
+      <div class="button">
+        <input type="submit" name="search" value="Search">
+      </div>
+      <div class="button">
+        <input type="submit" name="lucky" value="I'm feeling lucky">
+      </div>
+    </form>
   </div>
 </body>
 </html>
