--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div class="container">
     <div class="logo">
-
+      <!-- <img src="logo.png" alt=""> -->
     </div>
     <form action="#">
       <div class="search_box">
