--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
     <form action="#">
       <div class="search_box">
-        <input type="text" name="search_box">
+        <input type="text" name="search_box" class="search_text">
       </div>
       <div class="button">
         <input type="submit" name="search" value="Search">
