--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <title>Mock Google</title>
 </head>
 <body>
+  <div class="nav">
+    <ul>
+      <li><a href="#">+You</a></li>
+      <li><a href="#">Gmail</a></li>
+      <li><a href="#">Images</a></li>
+    </ul>
+  </div>
   <div class="container">
     <div class="logo">
       <!-- <img src="logo.png" alt=""> -->
@@ -14,12 +21,25 @@
         <input type="text" name="search_box" class="search_text">
       </div>
       <div class="button">
-        <input type="submit" name="search" value="Search">
+        <input type="submit" name="search" value="Google Search">
       </div>
       <div class="button">
         <input type="submit" name="lucky" value="I'm feeling lucky">
       </div>
     </form>
+  </div>
+  <div class="footer">
+    <ul>
+      <li><a href="#"></a>Advertising</li>
+      <li><a href="#"></a>Business</li>
+      <li><a href="#"></a>About</li>
+    </ul>
+    <ul>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#">Settings</a></li>
+      <li><a href="#">Use Google.com</a></li>
+    </ul>
   </div>
 </body>
 </html>
