--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     </form>
   </div>
   <div class="footer">
-    <ul>
-      <li><a href="#"></a>Advertising</li>
-      <li><a href="#"></a>Business</li>
-      <li><a href="#"></a>About</li>
+    <ul class="footer_left">
+      <li><a href="#">Advertising</a></li>
+      <li><a href="#">Business</a></li>
+      <li><a href="#">About</a></li>
     </ul>
-    <ul>
+    <ul class="footer_right">
       <li><a href="#">Privacy</a></li>
       <li><a href="#">Terms</a></li>
       <li><a href="#">Settings</a></li>
